updated links and added script

--- a/democrat.html
+++ b/democrat.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Demeocrat Page</title>
+    <title>Democrat Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='scripts.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
+    <script src='assets/script.js'></script>
 </head>
 <body>
     
