--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Main Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='script.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
+    <script src='assets/style.css'></script>
 </head>
 <body>
     
