--- a/democrat.html
+++ b/democrat.html
@@ -9,6 +9,9 @@
     <script src='assets/script.js'></script>
 </head>
 <body>
+
+
+    <script src='assets/script.js'></script>
     
 </body>
 </html>
