--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
 </head>
 <body>
     
+<div class="container">
+
+
+    <div class="row">
+      <div class="six columns" style="background: red">Rebublican</div>
+      <div class="six columns" style="background: blue ">Democrat</div>
+    </div>
+</div>
+
 </body>
 </html>
