--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <title>Main Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
     <script src='script.js'></script>
 </head>
 <body>
+    <header style= "text-align:center; border: 10px solid black; padding: 30px;">Election Year 2020</header>
     
 <div class="container">
 
 
-    <div class="row">
-      <div class="six columns" style="background: red">Rebublican</div>
-      <div class="six columns" style="background: blue ">Democrat</div>
+    <div class="uk-child-width-1-2 uk-text-center" uk-grid>
+            <div class="uk-child-width-1-2 uk-text-center" uk-grid>
+                <div>
+                    <div class="uk-card uk-card-primary uk-card-body margin:100px">Item</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-primary uk-card-body">Item</div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+      <!-- <div class="righBox" style="float: right; background: red; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Rebublican</div>
+      <div class="leftBox" style="float: left; background: blue; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Democrat</div>
+    </div>
+</div> -->
 
 </body>
 </html>
