--- a/democrat.html
+++ b/democrat.html
@@ -5,13 +5,11 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Democrat Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
-    <script src='assets/script.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
+    <script src='assets/js/script.js'></script>
 </head>
 <body>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src='assets/script.js'></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
 </body>
 </html>
