--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
     <link rel="stylesheet" href="assets/css/uikit.min.css" />
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
+    <script src="assets/js/uikit.min.js"></script>
+    <script src="assets/"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src='assets/js/script.js'></script>
 </head>
@@ -22,7 +22,7 @@
 
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin uk-grid" style="background-color: #0000ff;">
         <div class="uk-card-media-left uk-cover-container">
-            <img src="img/Biden.jpg" width="50%" height="50%" style="float:right; margin-right:50px; margin-top: 30px; background-color:lightskyblue;" alt="biden" uk-img>
+            <img src="assets/img/Biden.jpg" width="50%" height="50%" style="float:right; margin-right:50px; margin-top: 30px; background-color:lightskyblue;" alt="biden" uk-img>
             <canvas width="600" height="400"></canvas>
         </div>
         <div>
@@ -36,7 +36,7 @@
     
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin uk-grid" style="background-color: #ff0803;">
         <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-            <img src="img/trump.jpg" width="50%" height="50%" style="float:left; margin:20px ;" alt="trump" uk-img>
+            <img src="assets/img/trump.jpg" width="50%" height="50%" style="float:left; margin:20px ;" alt="trump" uk-img>
             <canvas width="600" height="400"></canvas>
         </div>
         <div>
