--- a/democrat.html
+++ b/democrat.html
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Democrat Page</title>
+    <title>Main Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
     <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
+    <link rel="stylesheet" href="assets/css/uikit.min.css" />
+    <script src="assets/js/uikit.min.js"></script>
+    <script src="assets/"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src='assets/js/script.js'></script>
 </head>
 <body>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
-</body>
+    <h1>Former Vice President Joe Biden</h1>
+    <img src="">
+    <main>
+        What to know about your Canidate
+    </main>
+    <div id="statsDem">
+    </div>
+    <div id="articlesDem"></div>
+    </body>
 </html>
