--- a/republican.html
+++ b/republican.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -16,9 +16,33 @@
 <body>
 <h1>President Donald J Trump</h1>
 <img src="">
-<main>
-    What to know about your Canidate
-</main>
+<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%;">
+
+    <ul class="uk-slideshow-items">
+        <li>
+            <img src="assets/img/trump1.jpg" alt="trumpHat" uk-cover>
+        </li>
+        <li>
+            <img src="assets/img/trump2.jpg" alt="trump2thumbsup" uk-cover>
+        </li>
+        <li>
+            <img src="assets/img/trump3.jpg" alt="trumpPence" uk-cover>
+        </li>
+        <li>
+            <img src="assets/img/trump4.jpg" alt="trumppoint" uk-cover>
+        </li>
+        <li>
+            <img src="assets/img/trump5.jpg" alt="TrumpKaga" uk-cover>
+        </li>
+    </ul>
+
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+
+</div>
+<h2>Know your Canadate!</h2>
+<H3>Bio</H3>
+    <P></P>
 <div id="statsRep">
 </div>
 <div id="articlesRep"></div>
