Finish html page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 </head>
 
 <body>
+    <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+        <div class="uk-navbar-left">
+
+            <ul class="uk-navbar-nav">
+                <li class="uk-active"><a href="#">Republican</a></li>
+                <li>
+
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li class="uk-active">
+                                <a href="#"></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="democrat.html">democratic</a></li>
+            </ul>
+
+        </div>
+    </nav>
+
     <header id="Header">Election Year 2020</header>
 
 
@@ -41,8 +63,8 @@
             <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
                 <div>
 
-                    <img onclick="window.open(this.src)" id="trump" src="assets/img/trump3.jpg" alt="trump" uk-img>
-                    <a class="uk-button uk-button-default" href="#">Link</a>
+                    <img id="trump" src="assets/img/trump3.jpg" alt="trump" uk-img>
+
                 </div>
 
                 <canvas width="600" height="400"></canvas>
