--- a/republican.html
+++ b/republican.html
@@ -13,10 +13,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src='assets/js/script.js'></script>
 </head>
-<body>
+<body style="text-align: center;">
 <h1>President Donald J Trump</h1>
 <img src="">
-<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%;">
+<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%; margin-left: 25%;">
 
     <ul class="uk-slideshow-items">
         <li>
