--- a/democrat.html
+++ b/democrat.html
@@ -13,6 +13,27 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
 <body style="text-align: center;">
+    <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+        <div class="uk-navbar-left">
+
+            <ul class="uk-navbar-nav">
+                <li class="uk-active"><a href="republican.html">Republican</a></li>
+                <li>
+
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li class="uk-active">
+                                <a href="#"></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="democrat.html">democratic</a></li>
+            </ul>
+
+        </div>
+    </nav>
     <h1>Former Vice President Joe Biden</h1>
     <img src="">
     <div class="uk-position-relative  uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style=" width: 50%; height: 50%; margin-left: 25%;">
