--- a/republican.html
+++ b/republican.html
@@ -15,6 +15,27 @@
 
 </head>
 <body style="text-align: center;">
+    <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+        <div class="uk-navbar-left">
+
+            <ul class="uk-navbar-nav">
+                <li class="uk-active"><a href="republican.html">Republican</a></li>
+                <li>
+
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li class="uk-active">
+                                <a href="#"></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="democrat.html">democratic</a></li>
+            </ul>
+
+        </div>
+    </nav>
 <h1>President Donald J Trump</h1>
 <img src="">
 <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%; margin-left: 25%;">
