--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="assets/js/uikit.min.js"></script>
     <script src="assets/"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src='assets/js/script.js'></script>
 </head>
 
 <body>
@@ -58,6 +57,7 @@
                         <div>
 
                             <img id="trump" src="assets/img/trump3.jpg" alt="trump" uk-img>
+                            <button id="learnMoreDem">Learn More</button>
 
                         </div>
 
@@ -75,6 +75,7 @@
                     <div class="uk-card-body">
                         <h3 class="uk-card-title" style="text-align:center; color: white;">Are you a Repubician?</h3>
                         <p style="text-align: center; font-size:x-large; color: white;">Do you share and agree with the values of the conservative Rebubican party? then click on your canadate, President Donald J Trump</p>
+                        <button id="learnMoreRep">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -82,7 +83,7 @@
       <div class="leftBox" style="float: left; background: blue; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Democrat</div>
     </div>
 </div> -->
-
+<script src='assets/js/script.js'></script>
 </body>
 
 </html>
