Added twitter pages

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="righBox" style="float: right; background: red; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Rebublican</div>
+        <div class="righBox" style="float: right; background: red; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Rebublican</div>
       <div class="leftBox" style="float: left; background: blue; padding: 20px; height: 200px; width: 25%; margin: 125px; ">Democrat</div>
     </div>
-</div> -->
+</div> 
 <script src='assets/js/script.js'></script>
 </body>
 
