--- a/republican.html
+++ b/republican.html
@@ -69,7 +69,7 @@
 </div>
 <div id="articlesRep"></div>
 
-
+<a class="twitter-timeline" href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">Tweets by realDonaldTrump</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src='assets/js/script.js'></script>
 
 </body>
