--- a/democrat.html
+++ b/democrat.html
@@ -67,7 +67,7 @@
     </div>
     <div id="articlesDem"></div>
 
-
+    <a class="twitter-timeline" href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">Tweets by JoeBiden</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src='assets/js/script.js'></script>
     </body>
 </html>
