--- a/republican.html
+++ b/republican.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -14,63 +15,60 @@
 
 
 </head>
+
 <body style="text-align: center;">
     <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
         <div class="uk-navbar-left">
 
             <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="republican.html">Republican</a></li>
+                <li><a href="democrat.html">Democratic</a></li>
                 <li>
+                    <a href="index.html">Home</a>
 
-                    <div class="uk-navbar-dropdown">
-                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li class="uk-active">
-                                <a href="#"></a>
-                            </li>
 
-                        </ul>
-                    </div>
                 </li>
-                <li><a href="democrat.html">democratic</a></li>
+                <li class="uk-active"><a href="republican.html">Republican</a></li>
             </ul>
 
         </div>
     </nav>
-<h1>President Donald J Trump</h1>
-<img src="">
-<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%; margin-left: 25%;">
+    <h1>President Donald J Trump</h1>
+    <img src="">
+    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%; margin-left: 25%;">
 
-    <ul class="uk-slideshow-items">
-        <li>
-            <img src="assets/img/trump1.jpg" alt="trumpHat" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump2.jpg" alt="trump2thumbsup" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump3.jpg" alt="trumpPence" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump4.jpg" alt="trumppoint" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump5.jpg" alt="TrumpKaga" uk-cover>
-        </li>
-    </ul>
+        <ul class="uk-slideshow-items">
+            <li>
+                <img src="assets/img/trump1.jpg" alt="trumpHat" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump2.jpg" alt="trump2thumbsup" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump3.jpg" alt="trumpPence" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump4.jpg" alt="trumppoint" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump5.jpg" alt="TrumpKaga" uk-cover>
+            </li>
+        </ul>
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
 
-</div>
-<h2>Know your Canadate!</h2>
-<H3>Bio</H3>
+    </div>
+    <h2>Know your Canadate!</h2>
+    <H3>Bio</H3>
     <P></P>
-<div id="statsRep">
-</div>
-<div id="articlesRep"></div>
+    <div id="statsRep">
+    </div>
+    <div id="articlesRep"></div>
 
-<a class="twitter-timeline" href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">Tweets by realDonaldTrump</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script src='assets/js/script.js'></script>
+    <a class="twitter-timeline" href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">Tweets by realDonaldTrump</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src='assets/js/script.js'></script>
 
 </body>
+
 </html>
