--- a/democrat.html
+++ b/democrat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -10,9 +11,11 @@
     <link rel="stylesheet" href="assets/css/uikit.min.css" />
     <script src="assets/js/uikit.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
-<body style="text-align: center;">
+
+<body id="bodyDem">
     <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
         <div class="uk-navbar-left">
 
@@ -34,9 +37,10 @@
 
         </div>
     </nav>
-    <h1>Former Vice President Joe Biden</h1>
+    <h1 style="text-align: center; color: white;" >Former Vice President Joe Biden</h1>
     <img src="">
-    <div class="uk-position-relative  uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style=" width: 50%; height: 50%; margin-left: 25%;">
+    <div class="uk-position-relative  uk-visible-toggle uk-light slides" tabindex="-1" uk-slideshow
+        style=" width: 50%; height: 50%; margin-left: 25%;">
 
         <ul class="uk-slideshow-items">
             <li>
@@ -55,19 +59,28 @@
                 <img src="assets/img/biden5.jpg" alt="Bidenwalk" uk-cover>
             </li>
         </ul>
-    
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-    
-    </div>
-    <h2>Know your Canidate!</h2>
-    <h3>Bio</h3>
-        <p></p>
-    <div id="statsDem">
-    </div>
-    <div id="articlesDem"></div>
 
-    <a class="twitter-timeline" href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">Tweets by JoeBiden</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+            uk-slideshow-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+            uk-slideshow-item="next"></a>
+
+    </div>
+    <h2 class="knowCandidate" >Know your Candidate!</h2>
+    <div class="info">
+        <h2>Bio</h2>
+        <p>Joe Biden is the 2020 presidential nominee for the Democratic Party. He previously held offices as a senator and as the Vice President(2008-2016). Before his political career he was an atorney. He has three children. His birthday is November 20th, 1942 making him 77 years old. He was born in Scranton, Pennsylvania. Zodiac Sign: Scorpio.</p>
+    </div>
+    <div id="statsDem" class="info">
+        <h2>Finacial Summary</h2>
+    </div>
+    <div id="articlesDem" class="info">
+        <h2>Recent Articles</h2>
+    </div>
+
+    <a class="twitter-timeline" href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">Tweets by JoeBiden</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src='assets/js/script.js'></script>
-    </body>
+</body>
+
 </html>
