--- a/republican.html
+++ b/republican.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -10,11 +11,13 @@
     <link rel="stylesheet" href="assets/css/uikit.min.css" />
     <script src="assets/js/uikit.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
 </head>
-<body style="text-align: center;">
+
+<body id="bodyRep">
     <nav class="uk-navbar-container uk-margin" uk-navbar="mode: click">
         <div class="uk-navbar-left">
 
@@ -36,41 +39,52 @@
 
         </div>
     </nav>
-<h1>President Donald J Trump</h1>
-<img src="">
-<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow style="width: 50%; height: 50%; margin-left: 25%;">
+    <h1 style="text-align: center; color: white;">President Donald J Trump</h1>
+    <img src="">
+    <div class="uk-position-relative uk-visible-toggle uk-light slides" tabindex="-1" uk-slideshow
+        style="width: 50%; height: 50%; margin-left: 25%;">
 
-    <ul class="uk-slideshow-items">
-        <li>
-            <img src="assets/img/trump1.jpg" alt="trumpHat" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump2.jpg" alt="trump2thumbsup" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump3.jpg" alt="trumpPence" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump4.jpg" alt="trumppoint" uk-cover>
-        </li>
-        <li>
-            <img src="assets/img/trump5.jpg" alt="TrumpKaga" uk-cover>
-        </li>
-    </ul>
+        <ul class="uk-slideshow-items">
+            <li>
+                <img src="assets/img/trump1.jpg" alt="trumpHat" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump2.jpg" alt="trump2thumbsup" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump3.jpg" alt="trumpPence" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump4.jpg" alt="trumppoint" uk-cover>
+            </li>
+            <li>
+                <img src="assets/img/trump5.jpg" alt="TrumpKaga" uk-cover>
+            </li>
+        </ul>
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+            uk-slideshow-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+            uk-slideshow-item="next"></a>
 
-</div>
-<h2>Know your Canadate!</h2>
-<H3>Bio</H3>
-    <P></P>
-<div id="statsRep">
-</div>
-<div id="articlesRep"></div>
+    </div>
+    <h2 class="knowCandidate">Know your Candidate!</h2>
+    <div class="info">
+        <H3>Bio</H3>
+        <P>Donald Trump is the 2020 republican nominee for president. Donald became the 45th president of the United States after beating Hilary Clinton for the office in 2016. Before his political career Donald was a real estate mogul and reality star. He has five children. His birthday is June 14th, 1946 making him 74 years old. He was born in Queens, New York. Zodiac Sign: Gemini</P>
+    </div>
+    <div id="statsRep" class="info">
+        <h2>Finacial Summary</h2>
+    </div>
+    <div id="articlesRep" class="info">
+        <h2>Recent Articles</h2>
+    </div>
 
-<a class="twitter-timeline" href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">Tweets by realDonaldTrump</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script src='assets/js/script.js'></script>
+    <a class="twitter-timeline" href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">Tweets by
+        realDonaldTrump</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src='assets/js/script.js'></script>
 
 </body>
+
 </html>
