found bug has been squished

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div id="democratic-background" class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin uk-grid">
                 <div class="uk-card-media-left uk-cover-container">
-                    <img id="biden" src="assets/img/Bidensmile.jpg" alt="biden" uk-img>
+                    <img id="biden" src="assets/img/bidensmile.jpg" alt="biden" uk-img>
                     <canvas width="600" height="400"></canvas>
                 </div>
                 <div class="uk-card-body">
