--- a/democrat.html
+++ b/democrat.html
@@ -63,7 +63,7 @@
     <h2 class="knowCandidate" >Know your Candidate!</h2>
     <div class="info">
         <h2>Bio</h2>
-        <p>Joe Biden is the 2020 presidential nominee for the Democratic Party. He previously held offices as a senator and as the Vice President(2008-2016). Before his political career he was an atorney. He has three children. His birthday is November 20th, 1942 making him 77 years old. He was born in Scranton, Pennsylvania. Zodiac Sign: Scorpio.</p>
+        <p class="bioText">Joe Biden is the 2020 presidential nominee for the Democratic Party. He previously held offices as a senator and as the Vice President(2008-2016). Before his political career he was an atorney. He has three children. His birthday is November 20th, 1942 making him 77 years old. He was born in Scranton, Pennsylvania. Zodiac Sign: Scorpio.</p>
     </div>
     <div id="statsDem" class="info">
         <h2>Finacial Summary</h2>
