--- a/republican.html
+++ b/republican.html
@@ -66,8 +66,8 @@
     </div>
     <h2 class="knowCandidate">Know your Candidate!</h2>
     <div class="info">
-        <H3>Bio</H3>
-        <P>Donald Trump is the 2020 republican nominee for president. Donald became the 45th president of the United States after beating Hilary Clinton for the office in 2016. Before his political career Donald was a real estate mogul and reality star. He has five children. His birthday is June 14th, 1946 making him 74 years old. He was born in Queens, New York. Zodiac Sign: Gemini</P>
+        <h2>Bio</h2>
+        <p class="bioText">Donald Trump is the 2020 republican nominee for president. Donald became the 45th president of the United States after beating Hilary Clinton for the office in 2016. Before his political career Donald was a real estate mogul and reality star. He has five children. His birthday is June 14th, 1946 making him 74 years old. He was born in Queens, New York. Zodiac Sign: Gemini</p>
     </div>
     <div id="statsRep" class="info">
         <h2>Finacial Summary</h2>
